@@ -3,6 +3,7 @@ CHANGES IN FLTK 1.3.4rc4				RELEASED: Nov ?? 2016
 Bug fixes and other improvements
 
 	- MacOS: fix a crash when closing a fullscreen window.
+	- Accept empty Fl_Pixmap in Fl_RGB_Image c'tor (STR #3348).
 
 CHANGES IN FLTK 1.3.4rc3				RELEASED: Oct 31 2016
 
